Add default high z-index for widget pane

--- a/src/styles/status.scss
+++ b/src/styles/status.scss
@@ -63,6 +63,7 @@
   position: absolute;
   top: 32px;
   width: 320px;
+  z-index: 900;
 
   &::before {
     border-color: transparent transparent #fff;
